# SprectreGuard

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  create_icons.py  encryptionwidget.cpp  encryptionwidget.h  filehistory.cpp  filehistory.h  historywidget.cpp  historywidget.h  main.cpp  mainwindow.cpp  mainwindow.h  obfuscationwidget.cpp  obfuscationwidget.h  resources.qrc  settingswidget.cpp  settingswidget.h  sidebar.cpp  sidebar.h  styles.qss
docs/: LLVM_INSTALLATION.md
resources/: resources.qrc
resources/styles/: dark.qss
src/: main.cpp  settingswidget.cpp  settingswidget.h
src/core/: settings.cpp  settings.h
src/protection/: exe_protection.cpp  exe_protection.h  llvm_obfuscation.cpp  llvm_obfuscation.h  source_protection.cpp  source_protection.h
src/ui/: mainwindow.cpp  mainwindow.h  sidebar.cpp  sidebar.h
src/ui/pages/: exeprotectionwidget.cpp  exeprotectionwidget.h  homewidget.cpp  homewidget.h  settingswidget.cpp  settingswidget.h  sourceprotectionwidget.cpp  sourceprotectionwidget.h
src/upx/src/: Makefile  bele.h  bele_policy.h  conf.h  except.cpp  except.h  file.cpp  file.h  filter.cpp  filter.h  help.cpp  lefile.cpp  lefile.h  linker.cpp  linker.h  main.cpp  miniacc.h  msg.cpp  options.cpp  options.h  p_armpe.cpp  p_armpe.h  p_com.cpp  p_com.h  p_djgpp2.cpp  p_djgpp2.h  p_elf.h  p_elf_enum.h  p_exe.cpp  p_exe.h  p_lx_elf.cpp  p_lx_elf.h  p_lx_exc.cpp  p_lx_exc.h  p_lx_interp.cpp  p_lx_interp.h  p_lx_sh.cpp  p_lx_sh.h  p_mach.cpp  p_mach.h  (+34 more)
src/upx/src/check/: dt_check.cpp  dt_impl.cpp  dt_xspan.cpp
src/upx/src/compress/: compress.cpp  compress.h  compress_lzma.cpp  compress_ucl.cpp  compress_zlib.cpp  compress_zstd.cpp
src/upx/src/console/: c_file.cpp  c_init.cpp  c_none.cpp  c_screen.cpp  console.h  s_djgpp2.cpp  s_object.cpp  s_vcsa.cpp  s_win32.cpp  screen.h
src/upx/src/filter/: ct.h  cto.h  ctoj.h  ctojr.h  ctok.h  ctsw.h  filter_impl.cpp  getcto.h  ppcbxx.h  sub.hh  sub16.h  sub32.h  sub8.h  sw.h
src/upx/src/stub/: Makefile  amd64-darwin.dylib-entry.h  amd64-darwin.macho-entry.h  amd64-darwin.macho-fold.h  amd64-darwin.macho-upxmain.h  amd64-linux.elf-entry.h  amd64-linux.elf-fold.h  amd64-linux.elf-so_entry.h  amd64-linux.elf-so_fold.h  amd64-linux.kernel.vmlinux-head.h  amd64-linux.kernel.vmlinux.h  amd64-linux.shlib-init.h  amd64-win64.pep.h  arm.v4a-linux.elf-entry.h  arm.v4a-linux.elf-fold.h  arm.v4a-wince.pe.h  arm.v4t-wince.pe.h  arm.v5a-darwin.macho-entry.h  arm.v5a-darwin.macho-fold.h  arm.v5a-linux.elf-entry.h  arm.v5a-linux.elf-fold.h  arm.v5a-linux.kernel.vmlinux-head.h  arm.v5a-linux.kernel.vmlinux.h  arm.v5a-linux.kernel.vmlinuz-head.h  arm.v5a-linux.kernel.vmlinuz.h  arm.v5a-linux.shlib-init.h  arm.v5t-linux.shlib-init.h  arm64-darwin.macho-entry.h  arm64-darwin.macho-fold.h  arm64-linux.elf-entry.h  arm64-linux.elf-fold.h  arm64-linux.shlib-init.h  armeb.v4a-linux.elf-entry.h  armeb.v4a-linux.elf-fold.h  armeb.v5a-linux.kernel.vmlinux-head.h  armeb.v5a-linux.kernel.vmlinux.h  i086-dos16.com.h  i086-dos16.exe.h  i086-dos16.sys.h  i386-bsd.elf-entry.h  (+51 more)
src/upx/src/stub/scripts/: bin2h.py  brandelf.py  gpp_inc.py  xstrip.py
src/upx/src/stub/src/: Makefile  amd64-darwin.dylib-entry.S  amd64-darwin.macho-entry.S  amd64-darwin.macho-fold.S  amd64-darwin.macho-main.c  amd64-darwin.macho-upxmain.c  amd64-darwin.macho-upxsubr.S  amd64-expand.S  amd64-linux.elf-entry.S  amd64-linux.elf-fold.S  amd64-linux.elf-fold.lds  amd64-linux.elf-main.c  amd64-linux.elf-so_entry.S  amd64-linux.elf-so_fold.S  amd64-linux.elf-so_fold.lds  amd64-linux.elf-so_main.c  amd64-linux.kernel.vmlinux-head.S  amd64-linux.kernel.vmlinux.S  amd64-linux.shlib-init.S  amd64-win64.pep.S  arm.v4a-linux.elf-entry.S  arm.v4a-linux.elf-fold.S  arm.v4a-linux.elf-fold.lds  arm.v4a-linux.shlib-init.S  arm.v4a-wince.pe.S  arm.v4t-linux.shlib-init.S  arm.v4t-wince.pe.S  arm.v5a-darwin.macho-entry.S  arm.v5a-darwin.macho-fold.S  arm.v5a-linux.elf-entry.S  arm.v5a-linux.elf-fold.S  arm.v5a-linux.kernel.vmlinux-head.S  arm.v5a-linux.kernel.vmlinux.S  arm.v5a-linux.kernel.vmlinuz-head.S  (+100 more)
src/upx/src/util/: bptr.h  membuffer.cpp  membuffer.h  snprintf.cpp  snprintf.h  util.cpp  util.h  xspan.cpp  xspan.h  xspan_fwd.h  xspan_impl.h  xspan_impl_common.h  xspan_impl_ptr.h  xspan_impl_ptr_or_null.h  xspan_impl_ptr_or_span.h  xspan_impl_span.h
tools/aes/keys/: encrypted_20250523_003217.key  encrypted_20250523_003217.key.txt
tools/llvm/ObfuscationPasses/: CMakeLists.txt  README.md  build.bat
(+210 files in other folders)
